<resources>
    <string name="app_name">CutieController</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="rotate_clockwise">rotate clockwise</string>
    <string name="rotate_anti_clockwise">rotate anti clockwise</string>
    <string name="right">right</string>
    <string name="left">left</string>
    <string name="local_network_connection">Local Network Connection</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="get_ssh_key">Get Ssh key</string>
    <string name="start_cutiepi">Start CutiePi</string>
</resources>
