<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/turnLeftButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/left"
            android:src="@drawable/up_left_50" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/turnRightButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/right"
            android:src="@drawable/up_right_50" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/rotateAntiClockwiseButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/rotate_anti_clockwise"
            android:src="@drawable/rotate_left_50" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/rotateClockwiseButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/rotate_clockwise"
            android:src="@drawable/rotate_right_50" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/goBackwardButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/down"
            android:src="@drawable/down_24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/goForwardButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/up"
            android:src="@drawable/up_24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>